--- a/packages/visual-editor/public/tos.html
+++ b/packages/visual-editor/public/tos.html
@@ -1,14 +1,31 @@
 <p>Opal Dogfood Terms</p>
 <p>Your use of the Opal dogfood is subject to the following terms:</p>
 <ol>
-<li>Opal is not a finished product, the dogfood version is available to select internal users for testing purposes only, and it may make mistakes.</li>
-<li>Your participation in the dogfood is voluntary.</li>
-<li><strong>The Opal dogfood is confidential</strong>; do not share any information about the dogfood, including output it generates, outside of Alphabet.</li>
-<li>You acknowledge that you have read and understand Google&rsquo;s <a href="http://go/epp" target="_blank">Employee
-    Privacy
-    Policy</a>.</li>
-<li>Please also refer to the <a href="http://go/using-genai-internally" target="_blank">Using GenAI Internally
-    Policy</a>.</li>
+  <li>
+    Opal is not a finished product, the dogfood version is available to select
+    internal users for testing purposes only, and it may make mistakes.
+  </li>
+  <li>Your participation in the dogfood is voluntary.</li>
+  <li>
+    <strong>The Opal dogfood is confidential</strong>; do not share any
+    information about the dogfood, including output it generates, outside of
+    Alphabet.
+  </li>
+  <li>
+    You acknowledge that you have read and understand Google&rsquo;s
+    <a href="http://go/epp" target="_blank">Employee Privacy Policy</a>.
+  </li>
+  <li>
+    Please also refer to the
+    <a href="http://go/using-genai-internally" target="_blank"
+      >Using GenAI Internally Policy</a
+    >.
+  </li>
 </ol>
-<p>Please reach out to the team at <a href="mailto:opal-support@google.com" target="_blank">opal-support@google.com</a>
-  with any questions or suggestions.</p>
+<p>
+  Please reach out to the team at
+  <a href="mailto:opal-support@google.com" target="_blank"
+    >opal-support@google.com</a
+  >
+  with any questions or suggestions.
+</p>
