--- a/packages/unified-server/app/index.html
+++ b/packages/unified-server/app/index.html
@@ -33,13 +33,18 @@
       }
     </style>
   </head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZ2SVQJELM"></script>
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-EZ2SVQJELM"
+  ></script>
   <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      // IP anonymized per OOGA policy.
-      gtag('config', 'G-EZ2SVQJELM', { 'anonymize_ip': true });
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+    // IP anonymized per OOGA policy.
+    gtag("config", "G-EZ2SVQJELM", { anonymize_ip: true });
   </script>
   <body>
     <script type="module" src="/src/client/app/init.ts"></script>
