Implement dynamic configuration.

--- a/packages/unified-server/app/index.html
+++ b/packages/unified-server/app/index.html
@@ -50,5 +50,10 @@
   </script>
   <body>
     <script type="module" src="/src/client/app/init.ts"></script>
+    <template
+      ><script type="application/json">
+        {{config}}
+      </script></template
+    >
   </body>
 </html>
