--- a/packages/visual-editor/index.html
+++ b/packages/visual-editor/index.html
@@ -30,4 +30,9 @@
 </script>
 <body>
   <script type="module" src="./src/init.ts"></script>
+  <template
+    ><script type="application/json">
+      {{config}}
+    </script></template
+  >
 </body>
