--- a/packages/visual-editor/index.html
+++ b/packages/visual-editor/index.html
@@ -3,13 +3,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
   <meta name="theme-color" content="#2E8BE8" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=data_info_alert,input,play_arrow"
   />
   <link
     rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Google+Symbols:opsz,wght,FILL,GRAD,ROND@20..48,100..700,0..1,-50..200,0..100&display=block&icon_names=3p,add,add_circle,alternate_email,arrow_back,arrow_circle_right,arrow_drop_down,asterisk,audio_magic_eraser,call_split,chat,chat_mirror,check,check_box,check_box_outline_blank,close,code_blocks,collapse_content,content_copy,csv,data_array,data_info_alert,delete,developer_board,docs,download,draw,drive,drive_pdf,edit,error,expand_content,extension,file_save,fit_screen,flag,flowchart,frame_source,globe_book,history,history_2,human,image,info,input,keyboard_arrow_down,keyboard_arrow_up,language,laps,link,logout,mail,map_search,menu,merge_type,mic,more_vert,movie,pen_spark,pending,person,photo_spark,preview,progress_activity,radio_button_checked,redo,replay,responsive_layout,save,search,search_spark,send,send_spark,settings,share,smart_toy,spark,step,stop_circle,summarize,sunny,tab_inactive,text_analysis,text_fields,undo,upload,video_youtube,videocam,videocam_auto,voice_selection,warning"
+    href="https://fonts.googleapis.com/css2?family=Google+Symbols:opsz,wght,FILL,GRAD,ROND@20..48,100..700,0..1,-50..200,0..100&display=block&icon_names=3p,add,add_circle,alternate_email,arrow_back,arrow_circle_right,arrow_drop_down,asterisk,audio_magic_eraser,call_split,chat,chat_mirror,check,check_box,check_box_outline_blank,close,code_blocks,collapse_content,content_copy,csv,data_array,data_info_alert,delete,developer_board,docs,download,draw,drive,drive_pdf,edit,error,expand_content,extension,file_copy,file_save,fit_screen,flag,flowchart,frame_source,gesture,globe_book,history,history_2,human,image,info,input,keyboard_arrow_down,keyboard_arrow_up,language,laps,link,logout,mail,map_search,menu,merge_type,mic,more_vert,movie,pen_spark,pending,person,photo_spark,preview,progress_activity,radio_button_checked,redo,replay,responsive_layout,save,search,search_spark,send,send_spark,settings,share,smart_toy,spark,step,stop_circle,summarize,sunny,tab_inactive,text_analysis,text_fields,undo,upload,video_youtube,videocam,videocam_auto,voice_selection,warning"
   />
 
   <link rel="stylesheet" href="/styles/global.css" />
