[particles-ui-demo] Update UI

--- a/packages/particles-ui-demo/index.html
+++ b/packages/particles-ui-demo/index.html
@@ -1,2 +1,28 @@
 <!doctype html>
-<script type="module" src="src/index.ts"></script>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Todo List</title>
+    <style>
+      html,
+      body {
+        font:
+          400 16px / 24px "Helvetica Neue",
+          Helvetica,
+          Arial,
+          sans-serif;
+        max-width: 500px;
+        margin: 0 auto;
+      }
+
+      todo-list {
+        max-width: 500px;
+        margin: 0 auto;
+      }
+    </style>
+  </head>
+  <body>
+    <script type="module" src="src/index.ts"></script>
+  </body>
+</html>
