[particles-ui-demo] Update UI

--- a/packages/particles-ui-demo/index.html
+++ b/packages/particles-ui-demo/index.html
@@ -13,12 +13,10 @@
           Helvetica,
           Arial,
           sans-serif;
-        max-width: 560px;
-        margin: 0 auto;
       }
 
-      todo-list {
-        max-width: 560px;
+      ui-receiver {
+        max-width: 840px;
         margin: 0 auto;
       }
     </style>
