[particles-ui-demo] Improve a few bits

--- a/packages/particles-ui-demo/demo.html
+++ b/packages/particles-ui-demo/demo.html
@@ -6,7 +6,7 @@
     <title>Particle UI Demo</title>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Google+Symbols:opsz,wght,FILL,GRAD,ROND@20..48,100..700,0..1,-50..200,0..100&display=block&icon_names=add,check,delete,progress_activity,send,sync_alt"
+      href="https://fonts.googleapis.com/css2?family=Google+Symbols:opsz,wght,FILL,GRAD,ROND@20..48,100..700,0..1,-50..200,0..100&display=block"
     />
 
     <link
