--- a/packages/unified-server/app/index.html
+++ b/packages/unified-server/app/index.html
@@ -9,11 +9,20 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Google+Symbols:opsz,wght,FILL,GRAD,ROND@20..48,100..700,0..1,-50..200,0..100&display=block&icon_names=3p,add,add_circle,alternate_email,arrow_back,arrow_circle_right,arrow_drop_down,audio_magic_eraser,call_split,chat,check,check_box,check_box_outline_blank,close,code_blocks,collapse_content,content_copy,csv,data_array,data_info_alert,delete,developer_board,docs,download,draw,drive,drive_pdf,edit,error,expand_content,extension,file_save,fit_screen,flag,flowchart,frame_source,gallery_thumbnail,globe_book,history,history_2,human,image,info,input,keyboard_arrow_down,keyboard_arrow_up,language,laps,link,logout,mail,map_search,menu,merge_type,mic,more_vert,movie,open_in_new,pen_spark,pending,person,photo_spark,preview,progress_activity,redo,replay,save,search,search_spark,send,send_spark,settings,share,shield_person,smart_toy,spark,step,summarize,sunny,tab_inactive,text_analysis,text_fields,undo,upload,video_youtube,videocam,videocam_auto,voice_selection,warning"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Google+Sans+Code&family=Google+Sans+Flex:opsz,wght,ROND@6..144,1..1000,100&family=Google+Sans:opsz,wght@17..18,400..700&display=block&display=swap"
+    />
     <style>
       html,
       body {
-        --bb-font-family-mono: "Courier New", Courier, monospace;
-        --bb-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        --bb-font-family-mono:
+          "Google Sans Code", "Courier New", Courier, monospace;
+        --bb-font-family:
+          "Google Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        --bb-font-family-flex:
+          "Google Sans Flex", "Helvetica Neue", Helvetica, Arial, sans-serif;
       }
 
       app-view {
