--- a/packages/visual-editor/index.html
+++ b/packages/visual-editor/index.html
@@ -9,6 +9,10 @@
     rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Google+Symbols:opsz,wght,FILL,GRAD,ROND@20..48,100..700,0..1,-50..200,0..100&display=swap&icon_names=3p,add,add_box,add_circle,alternate_email,arrow_back,arrow_circle_right,arrow_drop_down,asterisk,audio_magic_eraser,call_split,chat,chat_mirror,check,check_box,check_box_outline_blank,close,code,code_blocks,collapse_content,content_copy,csv,data_array,data_info_alert,delete,developer_board,docs,download,draw,drive,drive_pdf,drive_presentation,edit,error,expand_content,extension,file_copy,file_save,fit_screen,flag,flowchart,frame_source,gallery_thumbnail,gesture,globe_book,history,history_2,human,image,info,input,jump_to_element,keyboard_arrow_down,keyboard_arrow_up,language,laps,link,logout,mail,map_search,menu,merge_type,mic,more_vert,movie,open_in_new,output,palette,pen_spark,pending,person,photo_spark,preview,progress_activity,radio_button_checked,redo,remove,replay,responsive_layout,save,search,search_spark,send,send_spark,settings,share,sheets,shield_person,smart_toy,spark,step,stop_circle,summarize,sunny,tab_inactive,text_analysis,text_fields,undo,upload,video_youtube,videocam,videocam_auto,voice_selection,warning,web"
   />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@600&display=swap&text=.Aabdeghilnoprstuwy"
+    rel="stylesheet"
+  />
 
   <link rel="stylesheet" href="/styles/global.css" />
   <title>Visual Editor</title>
