--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -3,21 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
-    <meta name="theme-color" content="#2E8BE8" />
-
+    <meta name="theme-color" content="#000000" />
+    <title>Welcome</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Google+Symbols:opsz,wght,FILL,GRAD,ROND@20..48,100..700,0..1,-50..200,0..100&display=swap&icon_names=3p,add,add_box,add_circle,alternate_email,arrow_back,arrow_circle_right,arrow_drop_down,asterisk,audio_magic_eraser,call_split,casino,chat,chat_mirror,check,check_box,check_box_outline_blank,close,cloud_done,code,code_blocks,collapse_content,content_copy,csv,data_array,data_info_alert,delete,developer_board,docs,download,draw,drive,drive_pdf,drive_presentation,edit,error,expand_content,extension,file_copy,file_save,fit_screen,flag,flowchart,frame_source,gallery_thumbnail,gesture,globe_book,history,history_2,home_repair_service,human,image,info,input,jump_to_element,keyboard_arrow_down,keyboard_arrow_up,language,laps,link,logout,mail,map_search,menu,merge_type,mic,more_vert,movie,open_in_new,output,palette,pen_spark,pending,person,photo_spark,preview,progress_activity,publish,radio_button_checked,redo,remove,replay,responsive_layout,save,search,search_spark,send,send_spark,settings,share,sheets,shield_person,smart_toy,spark,step,stop_circle,summarize,sunny,tab_inactive,text_analysis,text_fields,undo,upload,video_youtube,videocam,videocam_auto,voice_selection,warning,web"
-    />
     <link rel="stylesheet" href="/styles/global.css" />
     <link rel="stylesheet" href="/styles/landing/landing.css" />
   </head>
   <body>
-    <h1>Welcome</h1>
-    <a href="#" target="_blank" id="sign-in">Sign in</a>
+    <nav>
+      <header>
+        <div>
+          <h1 class="sans-flex round w-500 md-headline-small" id="title">
+            Breadboard
+          </h1>
+          <span id="experiment">Experiment</span>
+        </div>
+        <a
+          class="sans w-500 md-label-large"
+          href="#"
+          target="_blank"
+          id="sign-in"
+          >Sign in</a
+        >
+      </header>
+    </nav>
+
+    <main>
+      <header>
+        <h1 class="sans-flex round w-400">
+          Build, edit and share mini-AI apps using natural language
+        </h1>
+        <div id="img">
+          <div id="img-contents"></div>
+        </div>
+      </header>
+      <section id="build">
+        <h1 class="sans-flex round w-400">How to build an app</h1>
+        <div class="sans-flex round w-500 md-title-large" id="video-container">
+          Coming Soon...
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <section>
+        <a id="discord" href="https://discord.gg/googlelabs">Stay connected </a>
+      </section>
+      <section id="links">
+        <h1 class="sans w-700 md-title-large">Google</h1>
+        <menu>
+          <li><a href="https://about.google/">About Google</a></li>
+          <li><a href="https://about.google/products/">Google Products</a></li>
+          <li><a href="https://policies.google.com/privacy">Privacy</a></li>
+          <li><a href="https://policies.google.com/terms">Terms</a></li>
+          <li><a href="https://support.google.com/">Help</a></li>
+        </menu>
+      </section>
+    </footer>
+
     <template
       ><script type="application/json">
         {{config}}
