[shared-ui/unified-server] Landing page tweaks

--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -14,9 +14,7 @@
     <nav>
       <header>
         <div>
-          <h1 class="sans-flex round w-500 md-headline-small" id="title">
-            Breadboard
-          </h1>
+          <h1 class="sans-flex round w-500 md-headline-small" id="title"></h1>
           <span id="experiment">Experiment</span>
         </div>
         <a
