--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -60,6 +60,32 @@
       </section>
     </footer>
 
+    <dialog id="scopes-error-dialog">
+      <div class="content">
+        <h2 class="title sans-flex round w-500 md-title-large">
+          Additional access required
+        </h2>
+        <div class="detail">
+          <p class="sans md-body-large">
+            Please click
+            <em>Sign in</em> again, and choose <em>Select all</em> when you are
+            asked about access.
+          </p>
+          <div class="screenshot-container">
+            <img
+              class="screenshot"
+              src="/styles/landing/images/sign-in-scopes-screenshot.png"
+              width="400"
+              height="188"
+            />
+          </div>
+        </div>
+        <a class="sign-in sans w-500 md-label-large" href="#" target="_blank"
+          >Sign in</a
+        >
+      </div>
+    </dialog>
+
     <template
       ><script type="application/json">
         {{config}}
