--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -42,6 +42,24 @@
               xmlns="http://www.w3.org/2000/svg"
               id="landing-svg"
             >
+              <title>
+                An image of a graph representing the flow of a mini-AI app
+              </title>
+              <desc>
+                This image shows a graph of connected steps in a mini-AI
+                application. The app is for creating a blog post writer and the
+                image shows interconnected steps for obtaining information from
+                the user regarding the blog post, a step for asset creation, and
+                a final step for outputting the blog post content.
+              </desc>
+              <style>
+                image {
+                  opacity: 0;
+                }
+                image.visible {
+                  opacity: 1;
+                }
+              </style>
               <defs></defs>
               <image x="6" y="4" width="475" id="arrow-1"></image>
               <image x="453" y="267" width="387" id="node-1"></image>
@@ -55,7 +73,7 @@
               ><img
                 src="/styles/landing/images/graph@2x.png"
                 id="landing-img"
-                alt="An image of a graph"
+                alt="An image of a graph representing the flow of a mini-AI app"
             /></noscript>
           </div>
         </div>
