--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -33,20 +33,71 @@
           Build, edit and share mini-AI apps using natural language
         </h1>
         <div id="img">
-          <div id="img-contents"></div>
+          <div id="img-contents">
+            <svg
+              width="100%"
+              height="100%"
+              viewBox="0 0 1175 597"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              id="landing-svg"
+            >
+              <title>
+                An image of a graph representing the flow of a mini-AI app
+              </title>
+              <desc>
+                This image shows a graph of connected steps in a mini-AI
+                application. The app is for creating a blog post writer and the
+                image shows interconnected steps for obtaining information from
+                the user regarding the blog post, a step for asset creation, and
+                a final step for outputting the blog post content.
+              </desc>
+              <style>
+                image {
+                  opacity: 0;
+                }
+                image.visible {
+                  opacity: 1;
+                }
+              </style>
+              <defs></defs>
+              <image x="6" y="4" width="475" id="arrow-1"></image>
+              <image x="453" y="267" width="387" id="node-1"></image>
+              <image x="640" y="121" width="143" id="arrow-2"></image>
+              <image x="753" y="88" width="422" id="node-2"></image>
+              <image x="946" y="213" width="47" id="arrow-3"></image>
+              <image x="785" y="416" width="388" id="node-3"></image>
+              <image x="418" y="524" width="348" id="input-1"></image>
+            </svg>
+            <noscript
+              ><img
+                src="/styles/landing/images/graph@2x.png"
+                id="landing-img"
+                alt="An image of a graph representing the flow of a mini-AI app"
+            /></noscript>
+          </div>
         </div>
       </header>
       <section id="build">
         <h1 class="sans-flex round w-400">How to build an app</h1>
         <div class="sans-flex round w-500 md-title-large" id="video-container">
-          Coming Soon...
+          <iframe
+            width="100%"
+            height="100%"
+            src="https://www.youtube.com/embed/E0hrcDO3Noc"
+            title="How to build an app"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
         </div>
       </section>
     </main>
 
     <footer>
       <section>
-        <a id="discord" href="https://discord.gg/googlelabs">Stay connected </a>
+        <a id="discord" href="https://discord.gg/googlelabs">Stay connected</a>
       </section>
       <section id="links">
         <h1 class="sans w-700 md-title-large">Google</h1>
