Show a dialog if signin blocked by geo restriction

--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -111,7 +111,7 @@
       </section>
     </footer>
 
-    <dialog id="scopes-error-dialog">
+    <dialog id="scopes-error-dialog" class="error-dialog">
       <div class="content">
         <h2 class="title sans-flex round w-500 md-title-large">
           Additional access required
@@ -134,6 +134,15 @@
         <a class="sign-in sans w-500 md-label-large" href="#" target="_blank"
           >Sign in</a
         >
+      </div>
+    </dialog>
+
+    <dialog id="geo-restriction-error-dialog" class="error-dialog">
+      <div class="content">
+        <h2 class="title sans-flex round w-500 md-title-large">
+          <span class="product-name">This product</span> is not available in
+          your country yet
+        </h2>
       </div>
     </dialog>
 
