--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -100,6 +100,7 @@
         <a
           id="discord"
           href="https://discord.com/channels/1172568727942860810/1397983123211288616"
+          target="_blank"
           >Stay connected</a
         >
       </section>
