[us/ve] Update Discord links (#6384)

--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -97,7 +97,12 @@
 
     <footer>
       <section>
-        <a id="discord" href="https://discord.gg/googlelabs">Stay connected</a>
+        <a
+          id="discord"
+          href="https://discord.com/channels/1172568727942860810/1397983123211288616"
+          target="_blank"
+          >Stay connected</a
+        >
       </section>
       <section id="links">
         <h1 class="sans w-700 md-title-large">Google</h1>
