Enable geo restriction on signin

--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -142,12 +142,9 @@
       </div>
     </dialog>
 
-    <dialog id="geo-restriction-error-dialog" class="error-dialog">
+    <dialog id="generic-error-dialog" class="error-dialog">
       <div class="content">
-        <h2 class="title sans-flex round w-500 md-title-large">
-          <span class="product-name">This product</span> is not available in
-          your country yet
-        </h2>
+        <h2 class="title sans-flex round w-500 md-title-large"></h2>
       </div>
     </dialog>
 
