[shared-ui] Add flow modal to landing

--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -142,6 +142,20 @@
       </div>
     </dialog>
 
+    <dialog id="shared-flow-dialog" class="error-dialog">
+      <div class="content">
+        <h2 class="title sans-flex round w-500 md-title-large"></h2>
+        <div class="detail">
+          <p class="sans md-body-large">
+            Mini-apps anyone can build. Sign in to view or make your own.
+          </p>
+        </div>
+        <a class="sign-in sans w-500 md-label-large" href="#" target="_blank"
+          >Sign in</a
+        >
+      </div>
+    </dialog>
+
     <dialog id="generic-error-dialog" class="error-dialog">
       <div class="content">
         <h2 class="title sans-flex round w-500 md-title-large"></h2>
