[ve/us] Update Discord links

--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -97,10 +97,7 @@
 
     <footer>
       <section>
-        <a
-          id="discord"
-          href="https://discord.com/channels/1172568727942860810/1397983123211288616"
-          target="_blank"
+        <a id="discord" href="https://discord.gg/googlelabs" target="_blank"
           >Stay connected</a
         >
       </section>
