Animate the additional permissions image

--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -127,9 +127,9 @@
           <div class="screenshot-container">
             <img
               class="screenshot"
-              src="/styles/landing/images/sign-in-scopes-screenshot.png"
+              src="/styles/landing/images/sign-in-scopes-screenshot.gif"
               width="400"
-              height="188"
+              height="193"
             />
           </div>
         </div>
