[unified-server] Move sign-in button

--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -17,21 +17,22 @@
           <h1 class="sans-flex round w-500 md-headline-small" id="title"></h1>
           <span id="experiment">Experiment</span>
         </div>
-        <a
-          class="sans w-500 md-label-large"
-          href="#"
-          target="_blank"
-          id="sign-in"
-          >Sign in</a
-        >
       </header>
     </nav>
 
     <main>
       <header>
-        <h1 class="sans-flex round w-400">
-          Build, edit and share mini-AI apps using natural language
-        </h1>
+        <div id="headline">
+          <h1 class="sans-flex round w-400">
+            Build, edit and share mini-AI apps using natural language
+          </h1>
+          <a
+            class="sans w-500 md-label-large"
+            href="#"
+            target="_blank"
+            id="sign-in"
+          ></a>
+        </div>
         <div id="img">
           <div id="img-contents">
             <svg
