--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
+
+    <meta
+      property="og:image"
+      content="{{origin}}/images/share-card-{{bucket}}.png"
+    />
+    <meta property="og:image:width" content="1440" />
+    <meta property="og:image:height" content="810" />
+    <meta
+      name="twitter:image"
+      content="{{origin}}/images/share-card-{{bucket}}.png"
+    />
+
     <title>Welcome</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
