--- a/packages/visual-editor/index.html
+++ b/packages/visual-editor/index.html
@@ -14,6 +14,18 @@
     rel="stylesheet"
   />
 
+  <meta
+    property="og:image"
+    content="{{origin}}/images/share-card-{{bucket}}.png"
+  />
+  <meta property="og:image:width" content="1440" />
+  <meta property="og:image:height" content="810" />
+
+  <meta
+    name="twitter:image"
+    content="{{origin}}/images/share-card-{{bucket}}.png"
+  />
+
   <link rel="stylesheet" href="/styles/global.css" />
   <title>Visual Editor</title>
 </head>
