[unified-server] Add sign-in button to header

--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -29,6 +29,12 @@
           <h1 class="sans-flex round w-500 md-headline-small" id="title"></h1>
           <span id="experiment">Experiment</span>
         </div>
+        <a
+          class="sans w-500 md-label-large"
+          href="#"
+          target="_blank"
+          id="sign-in-header"
+        ></a>
       </header>
     </nav>
 
