[particles] Add resolver demo

--- a/packages/unified-server/landing/index.html
+++ b/packages/unified-server/landing/index.html
@@ -45,7 +45,7 @@
             Build, edit and share mini-AI apps using natural language
           </h1>
           <a
-            class="sans w-500 md-label-large"
+            class="sans w-500 md-title-medium"
             href="#"
             target="_blank"
             id="sign-in"
