Add UI to test screens.

--- a/experiments/screens/index.html
+++ b/experiments/screens/index.html
@@ -6,6 +6,7 @@
     <title>Screens Demo</title>
   </head>
   <body>
+    <test-harness></test-harness>
     <script type="module" src="src/runner.ts"></script>
   </body>
 </html>
