--- a/experiments/screens/index.html
+++ b/experiments/screens/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Screens Demo</title>
   </head>
+  <style>
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
   <body>
     <test-harness></test-harness>
     <script type="module" src="src/runner.ts"></script>
